[tool.poetry]
name = "template"
version = "0.1.0"
description = "A template project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.23.2"
# other dependencies...
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
pydantic = "^2.10.5"
alembic = "^1.14.0"
pre-commit = "^4.0.1"
redis = "^5.2.1"
types-redis = "^4.6.0.20241004"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
