[project]
name = "template"
version = "0.1.0"
description = ""
authors = [
    {name = "Huston-German",email = "114566078+Huston-German@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.23.2,<0.24.0)",
    "sqlalchemy[asyncio] (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "pre-commit (>=4.0.1,<5.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "types-redis (>=4.6.0.20241004,<5.0.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"
mypy = "^1.14.1"


[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.poetry]
package-mode = false
